@@ -65,6 +65,7 @@ export(list_contact_65plus)
 export(list_contact_75plus)
 export(list_contact_ATSI_35_44)
 export(list_contact_appointments)
+export(list_contact_asthma)
 export(list_contact_chroniclungdisease)
 export(list_contact_count)
 export(list_contact_cst)
