@@ -155,6 +155,7 @@ list_contact_diabetes <- function(dMeasure_obj,
 # filtered by chosen dates and clinicians and number of contacts
 
 ##### chronic lung disease methods ##########################################################
+
 #' List of chronic lung disease in the contact list
 #'
 #' Filtered by date, and chosen clinicians
@@ -264,6 +265,131 @@ list_contact_chroniclungdisease <- function(dMeasure_obj,
   )
 )
 
+##### asthma fields ###########################################################
+
+.public(
+  dMeasure, "contact_asthma_list",
+  data.frame(
+    Patient = character(),
+    InternalID = integer(),
+    Count = integer(),
+    Latest = as.Date(integer(0),
+      origin = "1970-01-01"
+    ),
+    stringsAsFactors = FALSE
+  )
+)
+# filtered by chosen dates and clinicians and number of contacts
+
+#' List of asthma in the contact list
+#'
+#' Filtered by date, and chosen clinicians
+#'
+#' @param dMeasure_obj dMeasure R6 object
+#' @param date_from start date. default is $date_a
+#' @param date_to end date (inclusive). default is $date_b
+#' @param clinicians list of clinicians to view. default is $clinicians
+#' @param min_contact minimum number of contacts. default is $contact_min, initially one (1)
+#' @param min_date most recent contact must be at least min_date. default is $contact_minDate, initially -Inf
+#' @param contact_type contact types which are accepted. default is $contact_type
+#'
+#' @return dataframe of Patient (name), InternalID, Count, and most recent contact date
+#' @export
+list_contact_asthma <- function(dMeasure_obj,
+                                date_from = NA,
+                                date_to = NA,
+                                clinicians = NA,
+                                min_contact = NA,
+                                min_date = NA,
+                                contact_type = NA,
+                                lazy = FALSE) {
+  dMeasure_obj$list_contact_asthma(
+    date_from, date_to, clinicians,
+    min_contact, min_date, contact_type,
+    lazy
+  )
+}
+
+##### asthma methods ##########################################################
+.public(dMeasure, "list_contact_asthma", function(date_from = NA,
+                                                  date_to = NA,
+                                                  clinicians = NA,
+                                                  min_contact = NA,
+                                                  min_date = NA,
+                                                  contact_type = NA,
+                                                  lazy = FALSE) {
+  if (is.na(date_from)) {
+    date_from <- self$date_a
+  }
+  if (is.na(date_to)) {
+    date_to <- self$date_b
+  }
+  if (length(clinicians) == 1 && is.na(clinicians)) {
+    # sometimes clinicians is a list, in which case it cannot be a single NA!
+    # 'if' is not vectorized so will only read the first element of the list
+    # but if clinicians is a single NA, then read $clinicians
+    clinicians <- self$clinicians
+  }
+  if (is.na(min_contact)) {
+    min_contact <- self$contact_min
+  }
+  if (is.na(min_date)) {
+    min_date <- self$contact_minDate
+  }
+  if (is.na(contact_type[[1]])) {
+    contact_type <- self$contact_type
+  }
+
+  # no additional clinician filtering based on privileges or user restrictions
+
+  if (all(is.na(clinicians)) || length(clinicians) == 0) {
+    clinicians <- c("") # dplyr::filter does not work on zero-length list()
+  }
+
+  if (self$emr_db$is_open()) {
+    # only if EMR database is open
+    if (self$Log) {
+      log_id <- self$config_db$write_log_db(
+        query = "asthma_contact",
+        data = list(date_from, date_to, clinicians)
+      )
+    }
+
+    if (!lazy) {
+      self$list_contact_count(
+        date_from, date_to, clinicians,
+        min_contact, min_date, contact_type,
+        lazy
+      )
+    }
+
+    asthmaID <- self$contact_count_list %>>%
+      dplyr::mutate(Date = Latest) %>>%
+      self$asthma_list()
+
+    self$contact_asthma_list <- self$contact_count_list %>>%
+      dplyr::filter(InternalID %in% asthmaID)
+
+    if (self$Log) {
+      self$config_db$duration_log_db(log_id)
+    }
+  }
+
+  return(self$contact_asthma_list)
+})
+.reactive_event(
+  dMeasure, "contact_asthma_listR",
+  quote(
+    shiny::eventReactive(
+      c(self$contact_count_listR()), {
+        # update if reactive version of $date_a $date_b
+        # or $clinicians are updated.
+        self$list_contact_asthma(lazy = TRUE)
+        # re-calculates the counts
+      }
+    )
+  )
+)
 
 ##### age 15 plus fields ###########################################################
 # used for Practice Incentive Program Quality Improvement Measures
